k8s/postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:

  replicas: 1
  serviceName: 'postgres-service'

  selector:
    matchLabels:
      app: postgres
  
  
  template:

    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres-container

        image: postgres:17

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-mount
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: postgres-mount

    spec:
      accessModes: [ "ReadWriteOnce" ]

      resources:
        requests:
          storage: 1Gi


---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
