k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: link-simplifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus-container
          image: prom/prometheus:latest
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"

          ports:
            - containerPort: 9090

          volumeMounts:
            - name: prometheus-volume
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-volume
          configMap:
            name: prometheus-config

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: link-simplifier
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
